--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <nav>
+      <div class="logo">BANKSTOP</div>
+      <div class="nav-items">
+         <a href="">Home</a> 
+         <a href="">About</a> 
+         <a href="">Contact</a> 
+      </div>
+  </nav>
+  <section class="hero">
+      <div class="hero-container">
+          <div class="column-left">
+              <h1>Send Money Anywhere</h1>
+              <p>No overdrat fees and no late delays. Exclusive promotion for new members only.</p>
+                <button>Get Started</button>
+          </div>
+          <div class="column-right">
+              <img src="/undraw_wallet_aym5.svg" alt="illustration"
+              class="hero-image"
+          </div>
+      </div>
+  </section>
 </body>
 </html>
