--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
@@ -17,12 +18,12 @@
   <section class="hero">
       <div class="hero-container">
           <div class="column-left">
-              <h1>Send Money Anywhere</h1>
-              <p>No overdrat fees and no late delays. Exclusive promotion for new members only.</p>
+              <h1>Send Money Anywhere!</h1>
+              <p>No overdraft fees and no late delays. <br>Exclusive promotion for new members only.</p>
                 <button>Get Started</button>
           </div>
           <div class="column-right">
-              <img src="/undraw_wallet_aym5.svg" alt="illustration"
+              <img src="/undraw_pay_online_b1hk.svg" alt="illustration"
               class="hero-image"
           </div>
       </div>
