--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BANKSTOP</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <button>Get Started</button>
           </div>
           <div class="column-right">
-              <img src="/undraw_pay_online_b1hk.svg" alt="illustration"
+              <img src="images/undraw_pay_online_b1hk.svg" alt="illustration"
               class="hero-image"
           </div>
       </div>
